# formloop

./: .env.example  .gitignore  AGENTS.md  README.md  REQUIREMENTS.md  REQUIREMENTS_HARNESS.md  REQUIREMENTS_UI.md  SPEC.md  formloop.harness.toml  pyproject.toml
.github/workflows/: harness-ci.yml
datasets/basic_shapes/: cases.jsonl  cube.json  cube.step  rectangular_box.json  rectangular_box.step
datasets/basic_shapes/case_block/: case.yaml  truth.step
datasets/basic_shapes/ground_truth/: cube_20mm.step  plate_two_holes.step
datasets/basic_shapes/seed_models/: cube_20mm.py  plate_two_holes.py
datasets/feature_shapes/: hole_plate.json  hole_plate.step  verification_block.json  verification_block.step
datasets/feature_shapes/case_bracket/: case.yaml  truth.step
schemas/: artifact-manifest.schema.json  deterministic-metrics-output.schema.json  judge-output.schema.json  progress-event.schema.json  reference-image-upload-response.schema.json  review-summary.schema.json  revision.schema.json  run-create-request.schema.json  run-create-response.schema.json  run-snapshot.schema.json  run.schema.json
scripts/: build_ground_truth.py  fake_cad  scrape_build123d_docs.py  sync_schemas.py
src/formloop/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  datasets.py  jsonutil.py  logging_util.py  models.py  paths.py  persistence.py  sdk_messages.py  service.py  types.py  uat.py
src/formloop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/formloop/agents/: __init__.py  backends.py  build123d_libraries.py  cad_designer.py  cad_designer_plan.py  common.py  contracts.py  design_researcher.py  judge.py  manager.py  narrator.py  postmortem.py  quality_specialist.py  reviewer.py  skills.py  tools.py
src/formloop/api/: __init__.py  app.py
src/formloop/builtin_skills/: build123d_modeling.md  design_research.md  eval_execution.md  internal_design_review.md
src/formloop/cli/: __init__.py  _ansi.py  commands.py  role_overrides.py  run_renderer.py  run_report.py  ui_daemon.py
src/formloop/config/: __init__.py  env.py  profiles.py
src/formloop/dev/: dump_schemas.py  traceability.py
src/formloop/evals/: __init__.py  dataset.py  report.py  runner.py
src/formloop/http/: __init__.py  api.py
src/formloop/orchestrator/: __init__.py  direct_research.py  narration.py  narrator.py  phase_context.py  planning.py  postmortem.py  (+5 more)
tests/: conftest.py
tests/integration/: __init__.py  conftest.py  test_api.py  test_api_endpoints.py  test_cad_cli_adapter.py  test_cad_runtime_integration.py  test_design_flow.py  test_doctor.py  test_eval_flow.py  test_eval_service.py  test_harness_with_fake_agents.py  test_run_store_with_cad.py
tests/smoke/: __init__.py  test_cli.py  test_doctor.py
tests/uat/: __init__.py
tests/unit/: __init__.py  test_agents_construction.py  test_agents_multimodal.py  test_api_unit.py  test_backends.py  test_cad_designer_knowledge.py  test_cad_runtime_parsing.py  test_cli_commands.py  test_cli_eval_command.py  test_cli_run_command.py  test_cli_run_renderer.py  test_cli_run_report.py  test_cli_unit.py  test_config.py  test_config_and_paths.py  test_config_profiles.py  test_direct_research.py  test_eval_dataset.py  test_eval_report.py  test_eval_runner.py  test_knowledge_pack.py  test_library_primer.py  test_logging_util.py  test_misc.py  test_narration_service.py  test_narrator_agent.py  test_persistence.py  test_postmortem.py  test_research_limits.py  test_reviewer_vision_input.py  test_revision_loop_cad_validation.py  test_run_driver_narration.py  test_run_store.py  test_runtime_artifacts.py  test_runtime_multimodal.py  test_runtime_subprocess.py  test_schema_alignment.py  test_schemas.py  test_scrape_build123d_docs.py  test_sdk_messages.py  (+6 more)
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.test.ts  api.ts  session.test.ts  session.ts  styles.css  types.ts
(+68 files in other folders)
