[project]
name = "formloop"
version = "0.1.0"
description = "Formloop agent harness and eval framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "openai-agents[litellm]>=0.14.1,<0.15.0",
  "pillow>=11.0.0,<12.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "pyyaml>=6.0.2,<7.0.0",
  "typer>=0.12.5,<1.0.0",
  "uvicorn>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
]

[project.scripts]
formloop = "formloop.cli:app"

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/formloop --cov-report=term-missing --cov-report=xml"

